--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,10 +1,12 @@
+---
+
 extends: default
 
 rules:
   line-length:
     max: 120
     level: warning
-  document-start: disable
+  document-start: enable
   truthy:
     check-keys: false
 
