--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
       - id: golangci-lint
         name: golangci-lint
         entry: golangci-lint run
+        args: [--config=.golangci.yml]
         types: [go]
         language: system
         pass_filenames: false
