add docker compose provider

--- a/templates/web-dvwa.yaml
+++ b/templates/web-dvwa.yaml
@@ -23,7 +23,26 @@ info:
 providers:
   docker:
     ports:
-      "8080/tcp": "80"
-
+      "80/tcp": "8080"
     content: |
       IMAGE:vulnerables/web-dvwa
+
+  docker_compose:
+    content: |
+      services:
+        dvwa:
+          image: vulnerables/web-dvwa:latest
+          ports:
+            - "8081:80"
+          environment:
+            - MYSQL_ROOT_PASSWORD=p@ssw0rd
+          volumes:
+            - dvwa_data:/var/lib/mysql
+          restart: unless-stopped
+          networks:
+            - dvwa_network
+      volumes:
+        dvwa_data:
+      networks:
+        dvwa_network:
+          driver: bridge
