--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,31 +1,44 @@
 ---
 
-issues:
-  exclude-dirs:
-    - ../../go/pkg/mod
-  exclude-files:
-    - ".*\\.pb\\.go$"
-    - ".*\\.gen\\.go$"
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - gosec
-
+version: "2"
 linters:
   enable:
-    - gofmt
-    - govet
-    - gosimple
-    - staticcheck
-    - unused
     - gosec
     - revive
-    - errcheck
-
-linters-settings:
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-  gosec:
-    excludes:
-      - G306  # exclude file permission rule
+  settings:
+    errcheck:
+      check-type-assertions: true
+      check-blank: true
+    gosec:
+      excludes:
+        - G306
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - gosec
+        path: _test\.go
+    paths:
+      - .*\.pb\.go$
+      - .*\.gen\.go$
+      - ../../go/pkg/mod
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+  exclusions:
+    generated: lax
+    paths:
+      - .*\.pb\.go$
+      - .*\.gen\.go$
+      - ../../go/pkg/mod
+      - third_party$
+      - builtin$
+      - examples$
