--- a/templates/juice-shop/docker-compose.yaml
+++ b/templates/juice-shop/docker-compose.yaml
@@ -1,24 +1,22 @@
 ---
 
 services:
-  juice-shop:
-    image: bkimminich/juice-shop
-    container_name: juice-shop
+  web:
+    image: bkimminich/juice-shop:latest
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-    restart: unless-stopped
     networks:
-      - juice-shop-network
+      - network
     volumes:
-      - juice-shop-data:/juice-shop/data
-      - juice-shop-logs:/juice-shop/logs
+      - data:/juice-shop/data
+      - logs:/juice-shop/logs
 
 volumes:
-  juice-shop-data:
-  juice-shop-logs:
+  data:
+  logs:
 
 networks:
-  juice-shop-network:
+  network:
     driver: bridge
