images moved to ghrc.io

--- a/templates/bwapp/docker-compose.yaml
+++ b/templates/bwapp/docker-compose.yaml
@@ -2,7 +2,7 @@
 
 services:
   web:
-    image: hackersploit/bwapp-docker:latest
+    image: ghcr.io/happyhackingspace/bwapp
     ports:
       - "80:80"
     networks:
