--- a/templates/web-dvwa/docker-compose.yaml
+++ b/templates/web-dvwa/docker-compose.yaml
@@ -2,7 +2,7 @@
 
 services:
   web:
-    image: vulnerables/web-dvwa:latest
+    image: ghcr.io/happyhackingspace/web-dvwa
     ports:
       - "80:80"
     environment:
