--- a/templates/web-dvwa/index.yaml
+++ b/templates/web-dvwa/index.yaml
@@ -8,17 +8,18 @@ info:
   description: |
     The aim of DVWA is to practice some of the most common web vulnerability,
     with various difficultly levels, with a simple straightforward interface.
-  references:
-    - https://github.com/digininja/DVWA
-  technologies:
+  target:
     - mysql
     - php
+  type: Lab
   tags:
     - dvwa
     - php
     - mysql
     - sqli
     - xss
+  references:
+    - https://github.com/digininja/DVWA
 
 providers:
   docker-compose:
