fix(ci): push builded image to dev-tools

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,5 @@ jobs:
         with:
           context: .
           push: true
+          target: dev-tools
           tags: ghcr.io/${{ github.repository }}/dev-tools:latest
