--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -8,16 +8,46 @@ on:
     branches: [main]
 
 jobs:
-  lint:
+  build:
+    name: Build Docker image
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push final image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}/app:latest
+
+      - name: Build and push dev-tools image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          target: dev-tools
+          tags: ghcr.io/${{ github.repository }}/dev-tools:latest
+
+  lint:
+    name: Run Linters
+    runs-on: ubuntu-latest
+    needs: build
     container:
       image: ghcr.io/${{ github.repository }}/dev-tools:latest
     steps:
       - uses: actions/checkout@v4
       - run: make gofmt
-      - run: make goerrcheck
       - run: make golangci
       - run: make govet
+      - run: make goerrcheck
 
   hadolint:
     name: Run Hadolint
