--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   lint:
-    name: "Lint & Security Checks"
+    name: "Lint"
     if: ${{ !endsWith(github.actor, '[bot]') }}
     runs-on: ubuntu-latest
     steps:
@@ -33,7 +33,7 @@ jobs:
 
       - uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.57.1
+          version: v1.62.0
           args: --timeout=5m ./...
 
       - name: Run yamllint
