--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,10 +31,10 @@ jobs:
           go-version: "^1.23"
           cache: true
 
-      - uses: golangci/golangci-lint-action@v6
+      - uses: golangci/golangci-lint-action@v8
         with:
           version: latest
-          args: --timeout=5m ./...
+          args: --config=.golangci.yml
 
       - name: Run yamllint
         uses: reviewdog/action-yamllint@v1
