--- a/templates/juice-shop/index.yaml
+++ b/templates/juice-shop/index.yaml
@@ -9,7 +9,7 @@ info:
     It can be used in security trainings, awareness demos, CTFs and as a guinea pig for security tools!
     Juice Shop encompasses vulnerabilities from the entire OWASP Top Ten along with many other security
     flaws found in real-world applications!
-  target:
+  targets:
     - nodejs
     - angular
     - express
