--- a/templates/mutillidae-ii/index.yaml
+++ b/templates/mutillidae-ii/index.yaml
@@ -8,7 +8,7 @@ info:
     OWASP Mutillidae II is a free, open-source, deliberately vulnerable web application providing
     a target for web-security training. This is an easy-to-use web hacking environment designed
     for labs, security enthusiasts, classrooms, CTF, and vulnerability assessment tool targets.
-  target:
+  targets:
     - php
     - mysql
   type: Lab
