chore(ci): fix typo on version

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - uses: golangci/golangci-lint-action@v8
         with:
-          version: 1.57.1
+          version: v1.57.1
           args: --config=.golangci.yaml
 
       - uses: ibiqlik/action-yamllint@v3
