--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,10 +31,9 @@ jobs:
           go-version: "^1.23"
           cache: true
 
-      - uses: golangci/golangci-lint-action@v6
+      - uses: golangci/golangci-lint-action@v8
         with:
-          install-mode: binary
-          version: v1.57.1
+          version: latest
           args: --config=.golangci.yaml
 
       - uses: ibiqlik/action-yamllint@v3
