chore(ci): use trufflehog instead of gitleaks

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -44,11 +44,13 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
-      - name: Run gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}}
+      - name: Run trufflehog
+        uses: trufflesecurity/trufflehog@main
+        with:
+          path: ./
+          base: main
+          head: HEAD
+          extra_args: --debug --only-verified
 
       - name: Install gosec
         run: |
