chore(release): add templates folder

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,4 +81,4 @@ repos:
     hooks:
       - id: trufflehog
         name: trufflehog
-        args: [--no-verification, --fail]
+        args: [--no-verification]
