--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,6 +30,8 @@ archives:
       - zip
     name_template: >-
       {{ .ProjectName }}_{{ .Version }}_{{ if eq .Os "darwin" }}macOS{{ else }}{{ .Os }}{{ end }}_{{ .Arch }}
+    files:
+      - templates/
 
 checksum:
   algorithm: sha256
