--- a/templates/bwapp/index.yaml
+++ b/templates/bwapp/index.yaml
@@ -20,3 +20,11 @@ info:
 providers:
   docker-compose:
     path: "docker-compose.yaml"
+
+post-install: 
+  - "Go to http://localhost/install.php"
+  - "You should see 'Click here to install bWAPP.'."
+  - "Click the link to complete the installation."
+  - "bWAPP has been installed successfully!"
+  - "Set the security level to 'low' for testing."
+  - "credentials: bug/bee" # default credentials
