--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -3,9 +3,7 @@
 extends: default
 
 rules:
-  line-length:
-    max: 120
-    level: warning
+  line-length: disable   
   document-start: enable
   truthy:
     check-keys: false
