chore: Remove YAML document start markers from various files and update linting configurations.

--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -1,10 +1,9 @@
----
-
 extends: default
 
 rules:
-  line-length: disable   
-  document-start: enable
+  line-length: disable
+  document-start: disable
+
   truthy:
     check-keys: false
 
