--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -48,8 +48,8 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: main
-          head: HEAD
+          base: "${{ github.event.pull_request.base.sha || github.event.before }}"
+          head: "${{ github.event.pull_request.head.sha || github.sha }}"
           extra_args: --debug --only-verified
 
       - name: Install gosec
